@startuml
skinparam linetype ortho

entity lionweb_nodes {
    * id <<KEY>>
    --
    * classifier
    * annotations: text[]
    * parent
}
entity lionweb_properties {
    * node_id <FK>
    * property_language
    * property_version
    * property_key
    --
    value: text
}
entity lionweb_containments {
    * node_id <FK>
    * containment_language
    * containment_version
    * containment_key
    --
    children: text[]
}
entity lionweb_references {
    * node_id <FK>
    * reference_language
    * reference_version
    * reference_key
    --
    targets: jsonb[]
}

lionweb_nodes  ||--o{ lionweb_properties
lionweb_nodes  ||--o{ lionweb_containments
lionweb_nodes  ||--o{ lionweb_references
@enduml
